--- a/AndroidStudio/practice/fundamentals/4th/MessagingAndNotification/app/src/main/AndroidManifest.xml
+++ b/AndroidStudio/practice/fundamentals/4th/MessagingAndNotification/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="jp.mixi.practice.messagingandnotification">
+    package="jp.mixi.practice.messagingandnotification">
 
     <application
         android:allowBackup="true"
@@ -11,23 +11,46 @@
             android:name=".MainActivity"
             android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".IntentActivity1"
-            android:label="@string/app_name"/>
-
+            android:label="@string/app_name" />
         <activity
             android:name=".IntentActivity2"
-            android:label="@string/app_name"/>
-
+            android:label="@string/app_name" />
         <activity
             android:name=".NotificationActivity"
-            android:label="@string/app_name"/>
+            android:label="@string/app_name" />
+        <activity android:name=".NewActivity1">
+
+            <!--
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            -->
+        </activity>
+        <activity
+            android:name=".NewActivity2"
+            android:label="@string/title_activity_new2"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".NewActivity3" />
+
+        <receiver
+            android:name=".MyReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="jp.mixi.practice.messagingandnotification.intent.action.FIRST" />
+                <action android:name="jp.mixi.practice.messagingandnotification.intent.action.SECOND" />
+                <action android:name="jp.mixi.practice.messagingandnotification.intent.action.THIRD" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
