--- a/AndroidStudio/assignments/fundamentals/4th/MessagingAndNotification/app/src/main/AndroidManifest.xml
+++ b/AndroidStudio/assignments/fundamentals/4th/MessagingAndNotification/app/src/main/AndroidManifest.xml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="jp.mixi.assignment.messagingandnotification">
-
+    package="jp.mixi.assignment.messagingandnotification">
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name="jp.mixi.assignment.messagingandnotification.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".IntentActivity1"
             android:label="@string/app_name">
@@ -24,7 +23,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
-
         <activity
             android:name=".IntentActivity2"
             android:label="@string/app_name">
@@ -32,7 +30,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
-
         <activity
             android:name=".EditActivity"
             android:label="@string/app_name">
@@ -40,7 +37,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".IntentActivity2" />
         </activity>
-
         <activity
             android:name=".NotificationActivity1"
             android:label="@string/app_name">
@@ -48,7 +44,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
-
         <activity
             android:name=".NotificationActivity2"
             android:label="@string/app_name">
@@ -56,30 +51,33 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
-
         <activity
             android:name=".NotificationSubActivity1"
             android:label="@string/app_name">
             <intent-filter>
-                <action android:name="jp.mixi.assignment.messagingandnotification.android.intent.action.VIEW_MY_OWN"/>
-                <category android:name="android.intent.category.DEFAULT"/>
+                <action android:name="jp.mixi.assignment.messagingandnotification.android.intent.action.VIEW_MY_OWN" />
+
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
-
         <activity
             android:name=".NotificationSubActivity2"
             android:label="@string/app_name">
             <intent-filter>
-                <action android:name="jp.mixi.assignment.messagingandnotification.android.intent.action.VIEW_MY_OWN"/>
-                <category android:name="android.intent.category.DEFAULT"/>
+                <action android:name="jp.mixi.assignment.messagingandnotification.android.intent.action.VIEW_MY_OWN" />
+
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
+        <activity android:name=".OpenURLActivity"></activity>
     </application>
 
 </manifest>
